@@ -1,3 +1,7 @@
+1997-09-07  Thomas E. Dickey  <dickey@clark.net>
+
+	* mkdirs.sh, install-sh: RCS_BASE
+
 1997-06-15  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/dedview.c: check return-value of setsccreg()
